Source/Alternet.UI.Pal/Api/PropertyGrid.Api.h

ALTERNET_UI_API int PropertyGrid_GetRowHeight_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetRowHeight();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetSelectionBackgroundColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetSelectionBackgroundColor();
    });
}
ALTERNET_UI_API Color_C PropertyGrid_GetSelectionForegroundColor_(PropertyGrid* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetSelectionForegroundColor();
    });
}
ALTERNET_UI_API int PropertyGrid_GetSplitterPosition_(PropertyGrid* obj, uint32_t splitterIndex)
{
    return MarshalExceptions<int>([&](){
        return obj->GetSplitterPosition(splitterIndex);
    });
}
ALTERNET_UI_API int PropertyGrid_GetVerticalSpacing_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetVerticalSpacing();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_IsEditorFocused_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsEditorFocused();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_IsEditorsValueModified_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsEditorsValueModified();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_IsAnyModified_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsAnyModified();
    });
}
ALTERNET_UI_API void PropertyGrid_ResetColors_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->ResetColors();
    });
}
ALTERNET_UI_API void PropertyGrid_ResetColumnSizes_(PropertyGrid* obj, c_bool enableAutoResizing)
{
    MarshalExceptions<void>([&](){
        obj->ResetColumnSizes(enableAutoResizing);
    });
}
ALTERNET_UI_API void PropertyGrid_MakeColumnEditable_(PropertyGrid* obj, uint32_t column, c_bool editable)
{
    MarshalExceptions<void>([&](){
        obj->MakeColumnEditable(column, editable);
    });
}
ALTERNET_UI_API void PropertyGrid_BeginLabelEdit_(PropertyGrid* obj, uint32_t column)
{
    MarshalExceptions<void>([&](){
        obj->BeginLabelEdit(column);
    });
}
ALTERNET_UI_API void PropertyGrid_EndLabelEdit_(PropertyGrid* obj, c_bool commit)
{
    MarshalExceptions<void>([&](){
        obj->EndLabelEdit(commit);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCaptionBackgroundColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetCaptionBackgroundColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCaptionTextColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetCaptionTextColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCellBackgroundColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetCellBackgroundColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCellDisabledTextColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetCellDisabledTextColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCellTextColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetCellTextColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetColumnCount_(PropertyGrid* obj, int colCount)
{
    MarshalExceptions<void>([&](){
        obj->SetColumnCount(colCount);
    });
}
ALTERNET_UI_API void PropertyGrid_SetEmptySpaceColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetEmptySpaceColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetLineColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetLineColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetMarginColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetMarginColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetSelectionBackgroundColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetSelectionBackgroundColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetSelectionTextColor_(PropertyGrid* obj, Color col)
{
    MarshalExceptions<void>([&](){
        obj->SetSelectionTextColor(col);
    });
}
ALTERNET_UI_API void PropertyGrid_SetSplitterPosition_(PropertyGrid* obj, int newXPos, int col)
{
    MarshalExceptions<void>([&](){
        obj->SetSplitterPosition(newXPos, col);
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetUnspecifiedValueText_(PropertyGrid* obj, int argFlags)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetUnspecifiedValueText(argFlags));
    });
}
ALTERNET_UI_API void PropertyGrid_SetVirtualWidth_(PropertyGrid* obj, int width)
{
    MarshalExceptions<void>([&](){
        obj->SetVirtualWidth(width);
    });
}
ALTERNET_UI_API void PropertyGrid_SetSplitterLeft_(PropertyGrid* obj, c_bool privateChildrenToo)
{
    MarshalExceptions<void>([&](){
        obj->SetSplitterLeft(privateChildrenToo);
    });
}
ALTERNET_UI_API void PropertyGrid_SetVerticalSpacing_(PropertyGrid* obj, int vspacing)
{
    MarshalExceptions<void>([&](){
        obj->SetVerticalSpacing(vspacing);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_HasVirtualWidth_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->HasVirtualWidth();
    });
}
ALTERNET_UI_API uint32_t PropertyGrid_GetCommonValueCount_(PropertyGrid* obj)
{
    return MarshalExceptions<uint32_t>([&](){
        return obj->GetCommonValueCount();
    });
}
ALTERNET_UI_API char16_t* PropertyGrid_GetCommonValueLabel_(PropertyGrid* obj, uint32_t i)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(obj->GetCommonValueLabel(i));
    });
}
ALTERNET_UI_API int PropertyGrid_GetUnspecifiedCommonValue_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetUnspecifiedCommonValue();
    });
}
ALTERNET_UI_API void PropertyGrid_SetUnspecifiedCommonValue_(PropertyGrid* obj, int index)
{
    MarshalExceptions<void>([&](){
        obj->SetUnspecifiedCommonValue(index);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_IsSmallScreen_()
{
    return MarshalExceptions<c_bool>([&](){
        return PropertyGrid::IsSmallScreen();
    });
}
ALTERNET_UI_API void PropertyGrid_RefreshEditor_(PropertyGrid* obj)
{
    MarshalExceptions<void>([&](){
        obj->RefreshEditor();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_WasValueChangedInEvent_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->WasValueChangedInEvent();
    });
}
ALTERNET_UI_API int PropertyGrid_GetSpacingY_(PropertyGrid* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetSpacingY();
    });
}
ALTERNET_UI_API void PropertyGrid_SetupTextCtrlValue_(PropertyGrid* obj, const char16_t* text)
{
    MarshalExceptions<void>([&](){
        obj->SetupTextCtrlValue(text);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_UnfocusEditor_(PropertyGrid* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->UnfocusEditor();
    });
}
ALTERNET_UI_API void* PropertyGrid_GetLastItem_(PropertyGrid* obj, int flags)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetLastItem(flags);
    });
}
ALTERNET_UI_API void* PropertyGrid_GetRoot_(PropertyGrid* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetRoot();
    });
}
ALTERNET_UI_API void* PropertyGrid_GetSelectedProperty_(PropertyGrid* obj)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetSelectedProperty();
    });
}
ALTERNET_UI_API c_bool PropertyGrid_EnsureVisible_(PropertyGrid* obj, void* propArg)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EnsureVisible(propArg);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_SelectProperty_(PropertyGrid* obj, void* propArg, c_bool focus)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->SelectProperty(propArg, focus);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_AddToSelection_(PropertyGrid* obj, void* propArg)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AddToSelection(propArg);
    });
}
ALTERNET_UI_API c_bool PropertyGrid_RemoveFromSelection_(PropertyGrid* obj, void* propArg)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->RemoveFromSelection(propArg);
    });
}
ALTERNET_UI_API void PropertyGrid_SetCurrentCategory_(PropertyGrid* obj, void* propArg)
{
    MarshalExceptions<void>([&](){
        obj->SetCurrentCategory(propArg);
    });
}
ALTERNET_UI_API RectI_C PropertyGrid_GetImageRect_(PropertyGrid* obj, void* p, int item)
{
    return MarshalExceptions<RectI_C>([&](){
        return obj->GetImageRect(p, item);
    });
}
ALTERNET_UI_API SizeI_C PropertyGrid_GetImageSize_(PropertyGrid* obj, void* p, int item)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetImageSize(p, item);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateStringProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateStringProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateFilenameProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateFilenameProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateDirProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateDirProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateImageFilenameProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, const char16_t* value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateImageFilenameProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateSystemColorProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, Color value, uint32_t kind)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateSystemColorProperty(label, name, value, kind);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateCursorProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, int value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateCursorProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateBoolProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, c_bool value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateBoolProperty(label, name, value);
    });
}
ALTERNET_UI_API void* PropertyGrid_CreateIntProperty_(PropertyGrid* obj, const char16_t* label, const char16_t* name, int64_t value)
{
    return MarshalExceptions<void*>([&](){
        return obj->CreateIntProperty(label, name, value);
    });
}